# fl_scaling_sc_ldpc

./: .gitattributes  .gitignore  README.md  lim_iter_4_8_sc_ldpc_scaling_bec.ipynb  sc_ldpc_scaling_bec_4_8.ipynb
data/: r1_sc_ldpc_4_8_50_10000_048_nonterminated_theory_full.pkl  wave_params_bec_bp_4_8_semi.txt
fl_scaling/: density_evolution.py  est_scaling_params.py  fokker_planck.py  mean_evolution.py  ornstein_uhlenbeck.py  scaling_laws_full_BP_lim_iter.py  scaling_laws_full_BP_unlim_iter.py  scaling_laws_sw_lim_iter.py
sim_data/trajectories_peeling_decoding/: r1_sc_ldpc_4_8_50_10000_048_nonterminated_0.pkl
sim_data/variance_peeling_decoding/: aggregated_var_4_8_50_10000_048_cluster.pkl  var_4_8_50_10000_048_nonterm_0.pkl
simulators_sc_ldpc/bp_decoding/: CMakeLists.txt  SC_LDPC_Simulator_BPDecoder_BEC_SlidingWindow_LimIter_OlmosRandomEnsemble.c  SC_LDPC_Simulator_BPDecoder_BEC_full_BP_LimIter_OlmosRandomEnsemble.c  trajectories_SC_LDPC_Simulator_BPDecoder_BEC_full_BP_OlmosRandomEnsemble.c
simulators_sc_ldpc/peeling_decoding/: ber_sim.py  covariance.py  ldpc.py  peeling_decoding.py  sc_ldpc.py  sc_ldpc_protograph.py  simulate_variance.py
